<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:id="@+id/mDetail_main_view" android:background="@drawable/common_bg" android:layout_width="620.0dip" android:layout_height="450.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@+id/app_detail_icon" android:layout_width="122.099976dip" android:layout_height="122.099976dip" android:layout_marginLeft="36.95999dip" android:layout_marginTop="24.419983dip" android:src="@drawable/tv_posters_item_bg" android:scaleType="fitXY" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <LinearLayout android:gravity="left" android:orientation="vertical" android:id="@+id/app_detail_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:layout_toRightOf="@+id/app_detail_icon" android:layout_alignTop="@+id/app_detail_icon" android:layout_alignBottom="@+id/app_detail_icon">
        <TextView android:id="@+id/app_detail_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_detail_name" style="@style/app_detail_name_value" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/app_detail_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_detail_type" style="@style/app_detail_other_info_value" />
            <TextView android:layout_width="wrap_content" android:visibility="gone" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_line" style="@style/app_detail_other_info_value" />
            <TextView android:id="@+id/app_ID" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_appid" style="@style/app_detail_other_info_value" />
            <TextView android:layout_width="wrap_content" android:visibility="gone" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_line" style="@style/app_detail_other_info_value" />
            <TextView android:id="@+id/app_detail_params" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_params" style="@style/app_detail_other_info_value" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"  android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/app_detail_ver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_detail_version" style="@style/app_detail_other_info_value" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_line" style="@style/app_detail_other_info_value" />
            <TextView android:id="@+id/app_detail_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_update" style="@style/app_detail_other_info_value" />
        </LinearLayout>
        <TextView android:id="@+id/app_detail_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_detail_version" style="@style/app_detail_other_info_value" />
    </LinearLayout>
    <LinearLayout android:id="@+id/app_detail_new_update_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.099976dip" android:layout_below="@+id/app_detail_icon" android:layout_alignLeft="@+id/app_detail_icon">
        <TextView android:id="@+id/app_detail_new_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_detail_new_version" style="@style/app_detail_new_info_value" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_line" style="@style/app_detail_new_info_value" />
        <TextView android:id="@+id/app_detail_new_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_size" style="@style/app_detail_new_info_value" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_line" style="@style/app_detail_new_info_value" />
        <TextView android:id="@+id/app_detail_new_version_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23.099976dip" android:text="@string/app_detail_new_version_date" style="@style/app_detail_new_info_value" />
    </LinearLayout>
    <TextView android:ellipsize="end" android:id="@+id/app_detail_install" android:visibility="gone" android:layout_width="500.0dip" android:layout_height="wrap_content" android:layout_marginTop="33.0dip" android:layout_marginRight="36.95999dip" android:text="@string/app_detail_install" android:layout_below="@+id/app_detail_new_update_layout" android:layout_alignLeft="@+id/app_detail_icon" style="@style/app_detail_intro_info_value" />
    <TextView android:ellipsize="end" android:id="@+id/app_detail_intro_info" android:layout_width="500.0dip" android:layout_height="wrap_content" android:layout_marginTop="33.0dip" android:layout_marginRight="36.95999dip" android:text="@string/app_detail_intro_info" android:maxLines="5" android:layout_below="@+id/app_detail_icon" android:layout_alignLeft="@+id/app_detail_icon" style="@style/app_detail_intro_info_value" />
    <ImageView android:gravity="center_horizontal" android:id="@+id/app_detail_button_tongbu" android:background="@drawable/app_store_detail_tongbu_bg" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <ImageView android:gravity="center_horizontal" android:id="@+id/app_detail_button_free" android:background="@drawable/app_store_detail_free_bg" android:focusable="true" android:visibility="visible" android:layout_width="160dip" android:layout_height="60dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/app_detail_button_layout_ll" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageView android:gravity="center_horizontal" android:id="@+id/app_detail_button_open" android:background="@drawable/app_store_detail_open_bg" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <ImageView android:gravity="center_horizontal" android:id="@+id/app_detail_button_update" android:background="@drawable/app_store_detail_update_bg" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" />
    </LinearLayout>
    <ProgressBar android:id="@+id/app_detail_download_statue" android:visibility="gone" android:layout_width="396.0dip" android:layout_height="wrap_content" android:layout_marginBottom="27.71997dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/as_progress_style" />
    <com.word.wordinsidehome.view.InstallProgressView android:id="@+id/app_detail_setup_statue" android:background="@drawable/as_progressbar_bg" android:padding="3.0dip" android:visibility="gone" android:layout_width="396.0dip" android:layout_height="25.0dip" android:layout_marginBottom="27.71997dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>
